--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -33,6 +33,11 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/swagger-ui-express": "^4.1.8",
+    "cookie-parser": "^1.4.7",
+    "nodemon": "^3.1.10",
+    "swagger-ui-express": "^5.0.1"
   }
 }
