--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -22,6 +22,7 @@
     "express-http-proxy": "^2.1.2",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
+    "imagekit": "^6.0.0",
     "ioredis": "^5.7.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
