--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.19.0",
     "concurrently": "^9.2.1",
     "express": "^5.1.0",
+    "imagekit": "^6.0.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.19.0"
