--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/express": "^5.0.5",
     "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3"
   }
