--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "rate-limit-redis": "^4.2.2",
     "rate-limiter-flexible": "^7.3.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
+    "@types/node-cron": "^3.0.11",
     "@types/swagger-ui-express": "^4.1.8",
     "cookie-parser": "^1.4.7",
     "nodemon": "^3.1.10",
